--- a/src/sass/base/_variables.scss
+++ b/src/sass/base/_variables.scss
@@ -1,4 +1,4 @@
-$primary-color: #f44141;
+$primary-color: rgb(105, 86, 230);
 $secondary-color: #632f2f;
 $tertiary-color: #e6e6e6;
 $quaternary-color: #321515;
