--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -44,7 +44,7 @@ input:focus {
   box-shadow: 0 0 3px whitesmoke;
 }
 a:link {
-  color: yellow;
+  color: rgb(217, 164, 107);
 }
 a:visited {
   color: darkkhaki;
