--- a/src/sass/base/_mixins.scss
+++ b/src/sass/base/_mixins.scss
@@ -15,6 +15,13 @@
   align-content: center;
 }
 
+@mixin gridColumns {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+  max-width: 90vw;
+  grid-auto-flow: row dense;
+}
+
 @mixin inputsShadow {
   box-shadow: 0px 5px 8px -7px rgba(0, 0, 0, 0.49);
   -webkit-box-shadow: 0px 5px 8x -7px rgba(0, 0, 0, 0.49);
