--- a/src/app/github-profile-container/components/nav-bar/nav-bar.component.html
+++ b/src/app/github-profile-container/components/nav-bar/nav-bar.component.html
@@ -3,6 +3,6 @@
   <input
     class="nav-bar__input"
     type="text"
-    placeholder="Write an username and press Enter..."
+    placeholder="Write n username and press Enter..."
     (change)="OnChange($event)" />
 </nav>
