--- a/src/app/github-profile-container/components/nav-bar/nav-bar.component.scss
+++ b/src/app/github-profile-container/components/nav-bar/nav-bar.component.scss
@@ -5,5 +5,5 @@
   justify-content: space-evenly;
   width: 90%;
   padding: 20px 0;
-  border-bottom: 1px solid $tertiary-color;
+  border-bottom: 1px solid $border-color;
 }
