--- a/src/app/github-profile-container/components/not-found/not-found.component.html
+++ b/src/app/github-profile-container/components/not-found/not-found.component.html
@@ -1,1 +1,7 @@
-<p>not-found works!</p>
+<div class="main-not-found__container">
+  <img
+    class="main-not-found__image"
+    src="../../../../assets/notFound.png"
+    alt="Not Found" />
+  <div class="main-not-found__title">User Not Found</div>
+</div>
