--- a/src/app/github-profile-container/components/profile/profile.component.html
+++ b/src/app/github-profile-container/components/profile/profile.component.html
@@ -45,7 +45,7 @@
     </div>
     <div class="main-profile__label-field">
       <label>Member since: </label>
-      <label> {{ userData.created_at | date }}</label>
+      <label> {{ userData.created_at | memberSince }}</label>
     </div>
     <div class="main-profile__label-field">
       <label>Link to Profile: </label>
