--- a/src/sass/base/_variables.scss
+++ b/src/sass/base/_variables.scss
@@ -1,10 +1,7 @@
-$primary-color: rgb(105, 86, 230);
-$secondary-color: #632f2f;
-$tertiary-color: #e6e6e6;
-$quaternary-color: #321515;
-$quinary-color: #695757;
-$senary-color: #c69494;
-$septenary-color: #f3cec7;
-$danger-color: #f40909;
+$title-color: rgb(105, 86, 230);
+$border-color: #e6e6e6;
+$error-color: #f40909;
 $read-only-color: lightgray;
-$input-color: #88362e;
+$background-color: rgba(35, 33, 33, 0.727);
+$loader-background-color: rgba(200, 207, 255, 0.221);
+$loader-border-color: rgba(0, 0, 0);
