--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -3,7 +3,7 @@
 @forward './base/fonts';
 
 body {
-  font: 300 18px/1.4 'kanitregular';
+  font: 300 18px/1.4 'Mona-Sans';
   min-height: 100vh;
   margin: 0;
   background: rgb(45, 44, 44);
