--- a/src/app/github-profile-container/components/loader/loader.component.html
+++ b/src/app/github-profile-container/components/loader/loader.component.html
@@ -1,1 +1,3 @@
-<p>loader works!</p>
+<div *ngIf="this.loader.getLoading()" class="cssload-container">
+  <div class="cssload-speeding-wheel"></div>
+</div>
