--- a/src/app/github-profile-container/components/profile/profile.component.scss
+++ b/src/app/github-profile-container/components/profile/profile.component.scss
@@ -15,7 +15,7 @@
     .main-profile__nameUser {
       font-size: 1.5rem;
       font-weight: bold;
-      color: $primary-color;
+      color: $title-color;
     }
     .main-profile__label-field {
       @include centerMeRow;
