--- a/src/app/github-profile-container/components/repository-card/repository-card.component.scss
+++ b/src/app/github-profile-container/components/repository-card/repository-card.component.scss
@@ -3,13 +3,13 @@
 .repo-card__container {
   @include centerMeColumn;
   padding: 15px;
-  border: 1px solid whitesmoke;
+  border: 1px solid $border-color;
   border-radius: 5px;
-  background-color: rgba(35, 33, 33, 0.727);
+  background-color: $background-color;
   .repo-card__title {
     font-size: 1.2rem;
     font-weight: bold;
-    color: $primary-color;
+    color: $title-color;
   }
   .repo-card__rest-of-fields {
     .repo-card__label-field {
