--- a/src/app/github-profile-container/components/repository-card/repository-card.component.scss
+++ b/src/app/github-profile-container/components/repository-card/repository-card.component.scss
@@ -6,6 +6,7 @@
   border: 1px solid $border-color;
   border-radius: 5px;
   background-color: $background-color;
+  height: 140px;
   .repo-card__title {
     font-size: 1.2rem;
     font-weight: bold;
